# talos

./: Dockerfile  Dockerfile.dev  README.md  config.yml  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  requirements.txt  tmp.py
novnc/docker/: Dockerfile.amd64  Dockerfile.arm64  docker-compose.yml
novnc/supervisord/: supervisord.conf
system_manager/: agent_client.py  api.py  dependencies.py  docker-compose.yml  lifespan.py  models.py  state.py
system_manager/agent/: s6_agent.py  s6_client.py
system_manager/plugins/: __init__.py  ros2_topic_subscriber.py
system_manager/routers/: __init__.py  containers.py  docker.py  root.py  ros2.py  services.py  websocket.py
system_manager/system_manager_ui/: Dockerfile.dev
system_manager_ui/: Dockerfile  package-lock.json  package.json
system_manager_ui/components/: FixedLogPanel.tsx  LogViewer.tsx  Robot3DViewer.tsx  TopicViewerPanel.tsx
system_manager_ui/lib/: api.ts  websocket.ts
system_manager_ui/types/: api.ts
talos/: Dockerfile  Dockerfile.dev  __init__.py  agent_client.py  api.py  config.py  lifespan.py  models.py  state.py
talos/agent/: __init__.py  s6_agent.py  s6_client.py  utils.py
talos/plugins/: __init__.py  ros2_topic_subscriber.py
talos/routers/: __init__.py  containers.py  docker.py  root.py  ros2.py  services.py  websocket.py
talos_cli/: README.md  pyproject.toml  setup.cfg
talos_cli/talos_cli/: __init__.py  cli.py
talos_cli/talos_cli/docker/: Dockerfile.zenoh_daemon  docker-compose.yml
talos_ui/: Dockerfile.dev  README_UI.md  package-lock.json  package.json
(+35 files in other folders)
