[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talos-system-manager"
version = "0.1.0"
description = "Talos CLI: pip-installable launcher for talos server and UI containers. Run 'talos up' to start Docker stack."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
talos = "talos_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["talos_cli*"]

[tool.setuptools.package-data]
talos_cli = ["docker/*.yml", "docker/*.yaml", "config/*.yml", "config/*.yaml"]
